--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="stylec.css">
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
     <div class="calculator">
@@ -30,6 +30,6 @@
             <button onclick="appendValue('.')">.</button>
         </div>
     </div>
-    <script src="scriptc.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
